--- a/Index.html
+++ b/Index.html
@@ -31,6 +31,8 @@
                             <h2>Ans.10</h2>
                         </div>
                     </div>
+                    <button id="Interact">Previous</button>
+                    <button id="Interact">Next Card</button>
                 </div>
                 <div class="tabPanel">
                     <i><h2 align="center">Create FlashCards</h2></i>
